_sass/index.scss
/* ... */
@media screen and (max-width: $breakpoint-medium) {
  .property-preview {
    width: 69%;
    opacity: 1;
    position: relative;
    font-size: 1.3em;
    overflow: scroll;
    &.selected {
      transform: scale(1);
    }
  }
}
@media screen and (max-width: $breakpoint-small) {
  body {
    font-size: .9em;
  }

  .contact-row {
    > {
      width: 100%;
    }
  }

  .ham-menu {
    display: block !important;
  }

  #top-nav {
    display: none !important;
  }
  .nav-modal {
    .inner {
      .modal-logo {
        @include mobile-logo;
      }
      ul.nav {
        margin-top: 42px;
      }
    }
  }

  .review-slideshow {
    .inner {
      img {
        margin-top: 0;
        max-width: 35%;
      }
      p {
        width: 100%;
        max-width: 100%;
      }
    }
  }

  .logo-upper-left {
    @include mobile-logo;
  }

  .desktop-nav {
    display: none;
  }

  .mobile-nav {
    display: block;
  }

  #header-logo {
    height: 28px;
  }

  #contact-us-home-section {
    position: relative;
    .contact-us-gmap-container {
      display: none;
    }
    .contact-content {
      position: absolute;
      width: 100%;
      .contact-header {
        padding: 25px 0 0 0;
        text-align: center;
        background: rgba(255, 255, 255, 0.8);
      }
    }
  }

  .contact-body {
    padding: 50px 0 0 0;
    background: rgba(255, 255, 255, 0.8);
    .contact-row {
      > div {
        width: 100%;
      }
    }
  }
  .small-hidden {
    display: none;
  }

  .contact-us-modal {
    .contact-form {
      position: absolute;
      top: 0;
      left: 0;
      width: 100%;
      height: 100%;
      margin-top: 0;
      .form {
        margin: 0;
        > p {
          padding-top: 20px;
          font-size: 1.8em;
        }
      }
    }
  }

  .home-intro-left {
    width: 100%;
    > div {
      padding: 80px 20px 0 20px;
    }
  }

  .home-intro-right {
    width: 50%;
  }

  .services-info {
    width: 100%;
    .services-content {
      margin-left: 0;
    }
  }

  .services-row {
    display: block;
    .services-text {
      width: 100%;
    }
  }

  .services-img {
    display: none;
  }

  .property-preview {
    width: 90%;
  }

  #header-home {
   height: 80vh;
  }

  .home-intro {
    width: 80%;
    margin-top: 0;
    > div {
      padding: 10px;
    }
  }

  .nav {
    > li {
      display: block;
    }
  }

  #listings-sidebar {
    width: 90%;
  }

  #listings-info {
    width: 90%;
  }

  .ham-menu {
    height: 2em;
    width: 2em;
  }

  .services-info {
    width: 100%;
  }

  #contact-us {
    background-color: white;
    background-image: none;
    height: 340px;
    .contact-content {
      width: 100%;
      top: 0;
      left: 0;
      .contact-header {
        text-align: center;
      }
      .contact-body {
        padding: 0;
        > ul {
          padding-left: 20px;
        }
      }
    }
  }
  .footer {
    background: $primary-color;
    padding: 2%;
    color: white;
    & > * { line-height: 2.2; }
    .column {
      display: block;
      margin-right: 5%;
      .title {font-weight: bold}
      margin-left: 5%;
      opacity: .9;
      &.copyright {
        margin-top: 10%;
        margin-left: 3%;
      }
      &.social {
        margin: 0 0 0 9px;
        display: block;
        float: left;
        > a {
          float: left;
          padding-right: 2px;
        }
      }
      a {
        text-decoration: none;
        color: inherit;
        display: block;
        opacity: .85;
        img {
          color: white;
          width: 1em;
        }
      }
    }
  }
}
/**
 *  Do not remove the comment below. It's the markers used by gulp-inject to inject
 *  all your sass files automatically
 */
// injector
// endinjector

